# brainmaze-utils

./: .buildinfo  .gitignore  README.rst  annotations.html  brainmaze_eeg_ext.html  brainmaze_ext.html  brainmaze_utils_ext.html  brainmaze_zmq_ext.html  files.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  rdm.html  search.html  searchindex.js  signal.html  stat.html  types.html  vector.html
.doctrees/: annotations.doctree  brainmaze_eeg_ext.doctree  brainmaze_ext.doctree  brainmaze_utils_ext.doctree  brainmaze_zmq_ext.doctree  environment.pickle  files.doctree  index.doctree  rdm.doctree  signal.doctree  stat.doctree  types.doctree  vector.doctree
.github/workflows/: ci.yml  docs.yml  prepare-release.yml  release.yml  version-guard.yml
brainmaze_utils/: __init__.py  signal.py  vector.py
brainmaze_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
brainmaze_utils/annotations/: _io.py  _utils.py
docs_src/: requirements.txt
docs_src/source/: conf.py
tests/: test_annotations.py  test_signal.py
